# OpenGLEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  OpenGL.sln  README.md  imgui.ini
.github/workflows/: cmake.yml
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters  imgui.ini
OpenGL/res/meshes/: cube.h
OpenGL/res/shaders/: Basic.frag  Basic.shader  Basic.vert
OpenGL/src/: Camera.cpp  Camera.h  Main.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshBuilder.h  PointLight.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utility.h  VertexArray.cpp  VertexBufferLayout.h
OpenGL/src/tests/: Test.cpp  Test.h  Test3DCube.cpp  Test3DCube.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
cmake/: build.cmake  compilerOptions.cmake
engine/: CMakeLists.txt
engine/res/meshes/: chandelier_small.w2mesh  medkit.fbx
engine/res/shaders/: Basic.frag  Basic.vert
engine/src/: Camera.cpp  Camera.h  Channel.cpp  Channel.h  EntryPoint.cpp  IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshBuilder.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  PointLight.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.h  Utility.cpp  Utility.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  vendorLibs.h
engine/src/tests/: Test.cpp  Test.h  Test3DCube.cpp  Test3DCube.h  TestClearColor.cpp  TestClearColor.h
res/meshes/: plane.h
scripts/: build_linux.sh  make_debug.sh  make_release.sh
